finalize look and feel

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -7,8 +7,17 @@
 </head>
 <body>
     <h1>Falafel</h1>
-   <p>Description</p> 
-   <img src="images/falafel.jpg">
-    
+   <p><em>Description</em></p> 
+   <p>Meat free option </p>
+
+   <img src="images/falafel.jpg" alt="falafel balls" width="30%">
+   <p>Ingredients:</p>
+   <ul>
+       <li>chickpeas</li>
+       <Li>chickpea flour</Li>
+   <li>onion</li>
+   </ul>
+   <p>Roll into balls and fry or bake.
+       </p>
 </body>
 </html>
