--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,15 @@
 <body>
     <h1>Lasagna</h1>
     <p>Description</p> 
-    <img src="images/lasagna.jpg" alt="lasagna">
+    <img src="images/lasagna.jpg" alt="lasagna" width="30%">
+    <p>Ingredients:</p>
+    <ul>
+        <li>noodles</li>
+        <Li>sauce</Li>
+    <li>cheese</li>
+    </ul>
+    <p>Layer ingredients and bake 350 for 30 minutes.
+        </p>
 
 </body>
 </html>
