--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -7,8 +7,20 @@
 </head>
 <body>
     <h1>Oatmeal</h1>
-    <p>Description</p> 
-    <img src="images/oatmeal.jpg" alt="oatmeal">
+    <p><em>Description</em></p> 
+    <p>A Heart healthy breakfast</p>
+    <img src="images/oatmeal.jpg" alt="oatmeal" width="30%">
+    <p>Ingredients:</p>
+    <ul>
+        <li>oats</li>
+        <Li>milk</Li>
+    <li>brown sugar</li>
+    </ul>
+    <p>Start by measuring the oats and liquids. The ratio is 1:2. The usual serving size is ½ cup oats to 1 cup of water, milk or combination of both. I like combining ½ a cup of water and ½ a cup of milk for the best consistency.
+
+        Then place in the microwave without a cover on it (we dont want any microwave accidents when the liquid boils). Microwave on high for 2 minutes and the consistency should be perfect.
+        
+        </p>
     
 </body>
 </html>
