--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/falafel.html">Falafel</a>
-    <a href="recipes/Oatmeal.html">Oatmeal</a>
+    <p>Try something new today!</p>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/falafel.html">Falafel</a></li>
+    <li><a href="recipes/oatmeal.html">Oatmeal</a></li>
+    </ul>
 
 
 </body>
